Use more browser-like ruby rendering